# coustmer_churn

./: README.md  main.py  pyproject.toml
code/: eda.ipynb  modeltrainingtesting.ipynb
new data/: x_test  x_train  y_test  y_train
